tests/snapshots/main__food_show_missing.snap
---
source: tests/main.rs
info:
  program: nosh
  args:
    - food
    - show
    - nope
  env:
    XDG_DATA_HOME: /tmp/.tmpRVT3Yy
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: No food with key "nope"
