tests/snapshots/main__journal_edit.snap
---
source: tests/main.rs
info:
  program: nosh
  args:
    - journal
    - show
    - 2024-07-01
  env:
    XDG_DATA_HOME: /tmp/.tmpgrDj2O
---
success: true
exit_code: 0
----- stdout -----
┌────────┬─────────┬───────┬──────┬─────────┬──────┐
│ name   │ serving │ carb  │ fat  │ protein │ kcal │
├────────┼─────────┼───────┼──────┼─────────┼──────┤
│ Oats   │ 1.5 c   │ 206.1 │ 17.7 │ 40.5    │ 1146 │
├────────┼─────────┼───────┼──────┼─────────┼──────┤
│ Banana │ 1       │ 23.0  │ 0.2  │ 0.7     │ 98   │
├────────┼─────────┼───────┼──────┼─────────┼──────┤
│ Total  │         │ 229.1 │ 17.9 │ 41.2    │ 1244 │
└────────┴─────────┴───────┴──────┴─────────┴──────┘

----- stderr -----
