tests/snapshots/main__journal_show.snap
---
source: tests/main.rs
info:
  program: nosh
  args:
    - journal
    - show
    - 2024-07-01
  env:
    XDG_DATA_HOME: /tmp/.tmpIWrnRg
---
success: true
exit_code: 0
----- stdout -----
┌────────┬─────────┬───────┬──────┬─────────┬──────┐
│ name   │ serving │ carb  │ fat  │ protein │ kcal │
├────────┼─────────┼───────┼──────┼─────────┼──────┤
│ Banana │ 1       │ 23.0  │ 0.2  │ 0.7     │ 98   │
├────────┼─────────┼───────┼──────┼─────────┼──────┤
│ Oats   │ 0.5 c   │ 68.7  │ 5.9  │ 13.5    │ 382  │
├────────┼─────────┼───────┼──────┼─────────┼──────┤
│ Oats   │ 1       │ 68.7  │ 5.9  │ 13.5    │ 382  │
├────────┼─────────┼───────┼──────┼─────────┼──────┤
│ Banana │ 50 g    │ 11.5  │ 0.1  │ 0.4     │ 49   │
├────────┼─────────┼───────┼──────┼─────────┼──────┤
│ Total  │         │ 171.9 │ 12.1 │ 28.1    │ 911  │
└────────┴─────────┴───────┴──────┴─────────┴──────┘

----- stderr -----
